Add Brigel's lastname and snumber for ex02

--- a/ex02/ex02.tex
+++ b/ex02/ex02.tex
@@ -5,7 +5,7 @@
 
 \title{Design of Embedded System\\Exercise 2}
 \author{Erin van der Veen - s4431200\\
-	Brigel LASTNAME - SNUMBER}
+	Brigel Pineti - s1005549}
 
 \begin{document}
 \maketitle
