Fix Measurement Motor being on wrong Brick

--- a/mars_rover/report.tex
+++ b/mars_rover/report.tex
@@ -75,7 +75,7 @@ There is a substantial difference between our proposed configuration and the one
 	\begin{tabular}{|l|p{5cm}|p{5cm}|}
 		\hline
 		& EV3 Brick 1 & EV3 Brick 2 \\\hline
-		Actuators & Left Motor \newline Right Motor & Measurement Motor \\\hline
+		Actuators & Left Motor \newline Right Motor \newline Measurement Motor & \\\hline
 		Sensors & Color \{Left, Right\} \newline Ultrasonic Back \newline Gyro & Color Mid \newline Ultrasonic Front \newline Touch \{Left, Right\} \\\hline
 	\end{tabular}
 	\caption{The Configuration of the two bricks as chosen}
