--- a/mars_rover/report.tex
+++ b/mars_rover/report.tex
@@ -2,6 +2,7 @@
 
 \usepackage{longtable}
 \usepackage{minted}
+\setmintedinline{breaklines}
 
 \title{Mars Rover Mission DSL}
 \author{Erin van der Veen - s4431200\\
@@ -283,5 +284,21 @@ In the end, this meant that we had to settle for the approach that we also used 
 We set the Bluetooth task to have the highest priority, and accept the fact that the behavior of the Mars Rover is no longer deterministic.
 
 \section{Evaluation}
+The Bluetooth added a unnecessary layer of complexity to the design of the Mars Rover.
+In general, this would not be a problem if Bluetooth was actually properly supported by the OS that we were forced to use.
+The fact that this was not the case, and that the documentation of all system calls is only available in Japanese, made the implementation of the Bluetooth connection very frustrating.
 
+There are other things that I do not like about the OS/SDK that we used.
+
+Firstly, all system calls and other library functions were statically linked/compiled with the application.
+There is absolutely no need to be the case.
+The kernel could just support dynamic linking, do this runtime.
+This would not only prevent having bloated applications, but would also allow us to use whatever toolchain we prefer.
+For example, with the way that the current sdk works, it is (very) hard to elegantly link user created libraries in the final binary.
+If we could use our own toolchain, the only thing we had to ensure, is that it can dynamically link with the library provided by ev3rt.
+
+Secondly, they use a lot of POSIX syscalls \mintinline{cpp}{read, select, fopen, fgetc, write,
+fputs, poll, seek, open, etc} but for most of these the behavior is different to the one specified by the POSIX standard.
+As mentioned above, this would not be a major problem if we were able to read the documentation.
+But, as it stands, neither of us is able to read Japanese.
 \end{document}
